[package]
name = "mr"
version = "0.1.0"
authors = ["Jonas Brandstötter <jonas.brandstoetter@gmx.at>"]
edition = "2024"
description = "a manual reader"
readme = "README.md"
license = "MIT OR Apache-2.0"
default-run = "mr"
repository = "https://github.com/424ever/mr.git"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
mod_module_files = "deny"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
winnow = { version = "1.0.1", features = ["parser"]}
yansi = "1.0.1"

[[example]]
name = "no_nodes"
